--- a/FrontEnd/CSS/EstilosPages.css
+++ b/FrontEnd/CSS/EstilosPages.css
@@ -21,7 +21,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: rgb(7, 7, 7);
-    background-image: url('/Images/FondoPages.jpg');
+    background-image: url('/FrontEnd/Images/FondoPages.jpg');
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
