--- a/FrontEnd/CSS/EstilosUser.css
+++ b/FrontEnd/CSS/EstilosUser.css
@@ -20,7 +20,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: rgb(0, 0, 0);
-    background-image: url('/Images/fondop1.jpeg');
+    background-image: url('/FrontEnd/Images/fondop1.jpeg');
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
